--- a/tes.html
+++ b/tes.html
@@ -26,7 +26,7 @@
   h2 {
     text-align: center;
     color: #333;
-    margin: 10px 0;
+    margin: 10px 0 10px;
     font-size: 22px;
   }
 
@@ -71,40 +71,82 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === SHIFT TABLE + JAM/LOGO === */
-  .shift-wrapper {
+  /* === BAGIAN TOTAL + JAM === */
+  .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 95%;
-    margin: 15px auto;
+    margin: 20px 3%;
+    flex-wrap: wrap;
   }
 
-  .shift-table {
-    width: 400px;
-    font-size: 20px;
-    border-collapse: collapse;
+  .total-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .total-box {
+    background: white;
+    border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+    width: 180px;
   }
 
-  .shift-table th, .shift-table td {
-    font-size: 20px;
-    padding: 6px 10px;
-    border: 1px solid #ccc;
+  .total-box table {
+    width: 100%;
+    border-collapse: collapse;
   }
 
-  .datetime-logo {
+  .total-box th {
+    background: #083D36;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+  }
+
+  .total-box td {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    color: #333;
+  }
+
+  /* === JAM DAN LOGO === */
+  .total-wrapper1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-right: 3%;
+    text-align: center;
   }
 
-  #tanggal { font-size: 20px; font-weight: 600; color: #333; margin-bottom:5px; }
-  #jam { font-size: 40px; font-weight: bold; color: #006400; margin-bottom:5px; }
+  .datetime {
+    margin-bottom: 10px;
+  }
+
+  #tanggal {
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+  }
+
+  #jam {
+    font-size: 40px;
+    font-weight: bold;
+    color: #006400;
+    margin-top: 5px;
+    text-align: center;
+  }
 
   .logo-row {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
   }
 
@@ -112,10 +154,30 @@
     width: 60px;
     height: 60px;
     border-radius: 10px;
+    background: white;
     object-fit: contain;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
   }
 
+  @keyframes fadeZoomIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.8) rotate(-5deg);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1) rotate(0deg);
+    }
+  }
+
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+  }
+
+  /* === FOOTER ZINUS === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -128,20 +190,55 @@
     margin-top: 10px;
   }
 
-  .footer-zinus p { margin: 5px 0 15px; font-size: 16px; letter-spacing: 0.5px; }
+  .footer-zinus p {
+    margin: 5px 0 15px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+  }
 
+  /* === RESPONSIVE === */
+  @media (max-width: 768px) {
+    .container {
+      width: 100%;
+      margin: 10px 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
+
+    th, td {
+      font-size: 14px;
+      padding: 6px 4px;
+    }
+
+    .marquee { font-size: 16px; padding: 8px 0; }
+    h2 { font-size: 18px; }
+    #jam { font-size: 24px; }
+    #tanggal { font-size: 14px; }
+
+    .zinus-logo, .zinus-logo1 {
+      width: 45px;
+      height: 45px;
+    }
+
+    .logo-row {
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .footer-zinus p { font-size: 14px; }
+  }
 </style>
 </head>
 <body>
 
-<!-- TEKS BERJALAN -->
+<!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- TABEL TOPPER -->
+<!-- === TABEL TOPPER === -->
 <div class="container">
   <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
@@ -158,7 +255,7 @@
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- TABEL FOAM -->
+<!-- === TABEL FOAM === -->
 <div class="container">
   <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
@@ -172,11 +269,13 @@
       <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
+  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- SHIFT 1 & 2 + JAM/LOGO -->
-<div class="shift-wrapper">
+<!-- === BAGIAN TOTAL DAN JAM === -->
+<div class="top-bar">
+
+  <div class="shift-wrapper">
   <table class="shift-table">
     <thead>
       <tr>
@@ -203,7 +302,7 @@
   </div>
 </div>
 
-<!-- FOOTER -->
+<!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -310,3 +409,8 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
+
+
+
+
