--- a/shift2.html
+++ b/shift2.html
@@ -11,25 +11,30 @@
     margin: 0;
     padding: 0;
   }
-
- .marquee {
+  
+.marquee-container {
   width: 100%;
   overflow: hidden;
   background: #083D36;
   color: white;
   font-size: 40px;
   font-weight: bold;
-}
-
-.marquee-track {
-  display: flex;
   white-space: nowrap;
-  animation: marquee 15s linear infinite;
+  position: relative;
 }
 
-.marquee-track span {
-  padding-right: 50px; /* jarak antar teks duplikat */
+.marquee-content {
+  display: inline-block;
+  position: absolute;
+  will-change: transform;
+  animation: scroll-left 15s linear infinite;
 }
+
+@keyframes scroll-left {
+  0%   { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
+
 
 @keyframes marquee {
   0% { transform: translateX(0); }
@@ -246,10 +251,9 @@
 <body>
 
 <!-- === TEKS BERJALAN === -->
-<div class="marquee">
-  <div class="marquee-track">
-    <span>HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING&nbsp;&nbsp;&nbsp;</span>
-    <span>HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING&nbsp;&nbsp;&nbsp;</span>
+<div class="marquee-container">
+  <div class="marquee-content">
+    HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </div>
 </div>
 
