--- a/shift2.html
+++ b/shift2.html
@@ -232,13 +232,11 @@
 <body>
 
 <!-- === TEKS BERJALAN === -->
-<div class="marquee-container">
-  <div class="marquee-track">
-    <span>HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING</span>
-    <span>HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING</span>
-  </div>
+<div class="marquee">
+  <marquee behavior="scroll" direction="left" scrollamount="6">
+    HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
+  </marquee>
 </div>
-
 
 
 <!-- === TABEL TOPPER === -->
