--- a/tes.html
+++ b/tes.html
@@ -5,37 +5,131 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
-  body { font-family:'Segoe UI',Arial,sans-serif; background:#f4f6f8; margin:0; padding:0; }
-  .marquee { background:#083D36; color:white; padding:10px 0; font-size:40px; font-weight:bold; text-align:center; overflow:hidden; white-space:nowrap; }
-  h2 { text-align:center; color:#333; margin:10px 0; font-size:22px; }
-  .container { width:95%; margin:15px auto; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); overflow-x:auto; padding:0; }
-  table { width:100%; border-collapse:collapse; table-layout:fixed; }
-  th, td { padding:10px 6px; text-align:center; font-size:25px; }
-  th { background:#083D36; color:white; }
-  tr:nth-child(even){background:#f9f9f9;} tr:hover{background:#e3f2fd;}
-  .footer { text-align:right; font-size:12px; padding:8px; background:#f1f1f1; color:#666; border-top:1px solid #ddd; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
-  /* TOTAL + JAM */
-  .top-bar { display:flex; justify-content:space-between; align-items:flex-start; margin:20px 3%; flex-wrap:wrap; }
-  .total-wrapper { display:flex; justify-content:flex-start; gap:20px; align-items:center; }
-  .total-box { background:white; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); overflow:hidden; width:180px; }
-  .total-box table { width:100%; border-collapse:collapse; }
-  .total-box th { background:#083D36; color:white; font-size:18px; padding:10px; }
-  .total-box td { font-size:30px; font-weight:bold; text-align:center; padding:10px; color:#333; }
-  /* TABEL SHIFT */
-  .shift-wrapper { display:flex; justify-content:space-between; align-items:flex-start; margin-top:10px; }
-  .shift-table { width:50%; font-size:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
-  .shift-table th, .shift-table td { font-size:22px; padding:6px 10px; }
-  /* JAM DAN LOGO */
-  .datetime-wrapper { display:flex; flex-direction:column; align-items:flex-end; justify-content:flex-start; gap:10px; font-size:14px; }
-  #tanggal { font-size:20px; font-weight:600; color:#333; }
-  #jam { font-size:40px; font-weight:bold; color:#006400; text-align:right; }
-  .logo-row { display:flex; justify-content:flex-end; align-items:center; gap:15px; }
-  .zinus-logo, .zinus-logo1 { width:60px; height:60px; border-radius:10px; background:white; object-fit:contain; box-shadow:0 2px 6px rgba(0,0,0,0.2); animation:fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite; }
-  @keyframes fadeZoomIn { 0%{opacity:0; transform:scale(0.8) rotate(-5deg);} 100%{opacity:1; transform:scale(1) rotate(0deg);} }
-  @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.05);} 100%{transform:scale(1);} }
-  /* FOOTER */
-  .footer-zinus { display:flex; justify-content:center; align-items:center; flex-direction:column; background:#083D36; color:white; padding:20px 10px; border-top:4px solid #004d00; margin-top:10px; }
-  .footer-zinus p { margin:5px 0 15px; font-size:16px; letter-spacing:0.5px; }
+  body {
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background-color: #f4f6f8;
+    margin: 0;
+    padding: 0;
+  }
+
+  .marquee {
+    background: #083D36;
+    color: white;
+    padding: 10px 0;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  h2 {
+    text-align: center;
+    color: #333;
+    margin: 10px 0;
+    font-size: 22px;
+  }
+
+  .container {
+    width: 95%;
+    margin: 15px auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    overflow-x: auto;
+    padding: 0;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+  }
+
+  th, td {
+    padding: 10px 6px;
+    text-align: center;
+    font-size: 25px;
+  }
+
+  th {
+    background: #083D36;
+    color: white;
+  }
+
+  tr:nth-child(even) { background-color: #f9f9f9; }
+  tr:hover { background-color: #e3f2fd; }
+
+  .footer {
+    text-align: right;
+    font-size: 12px;
+    padding: 8px;
+    background: #f1f1f1;
+    color: #666;
+    border-top: 1px solid #ddd;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  /* === SHIFT TABLE + JAM/LOGO === */
+  .shift-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 95%;
+    margin: 15px auto;
+  }
+
+  .shift-table {
+    width: 400px;
+    font-size: 20px;
+    border-collapse: collapse;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  .shift-table th, .shift-table td {
+    font-size: 20px;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+  }
+
+  .datetime-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #tanggal { font-size: 20px; font-weight: 600; color: #333; margin-bottom:5px; }
+  #jam { font-size: 40px; font-weight: bold; color: #006400; margin-bottom:5px; }
+
+  .logo-row {
+    display: flex;
+    gap: 15px;
+  }
+
+  .zinus-logo, .zinus-logo1 {
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    object-fit: contain;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  }
+
+  .footer-zinus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #083D36;
+    color: white;
+    padding: 20px 10px;
+    border-top: 4px solid #004d00;
+    margin-top: 10px;
+  }
+
+  .footer-zinus p { margin: 5px 0 15px; font-size: 16px; letter-spacing: 0.5px; }
+
 </style>
 </head>
 <body>
@@ -57,7 +151,9 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyTopper"><tr><td colspan="13">Loading data...</td></tr></tbody>
+    <tbody id="bodyTopper">
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+    </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
@@ -72,12 +168,14 @@
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyFoam"><tr><td colspan="13">Loading data...</td></tr></tbody>
+    <tbody id="bodyFoam">
+      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+    </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- SHIFT + JAM -->
+<!-- SHIFT 1 & 2 + JAM/LOGO -->
 <div class="shift-wrapper">
   <table class="shift-table">
     <thead>
@@ -86,7 +184,8 @@
         <th colspan="2">SHIFT 2</th>
       </tr>
       <tr>
-        <th>Topper</th><th>Foam</th><th>Topper</th><th>Foam</th>
+        <th>Topper</th><th>Foam</th>
+        <th>Topper</th><th>Foam</th>
       </tr>
     </thead>
     <tbody id="shiftBody">
@@ -94,7 +193,7 @@
     </tbody>
   </table>
 
-  <div class="datetime-wrapper">
+  <div class="datetime-logo">
     <div id="tanggal"></div>
     <div id="jam"></div>
     <div class="logo-row">
@@ -103,7 +202,6 @@
     </div>
   </div>
 </div>
-<div class="footer">Auto-refresh setiap 30 detik</div>
 
 <!-- FOOTER -->
 <footer class="footer-zinus">
@@ -114,79 +212,101 @@
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
-  const status = document.querySelector(".footer#status") || document.createElement("div");
+  const status = document.getElementById("status");
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data ("+response.status+")");
+    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
-    const rows = text.trim().split("\n").map(r=>r.split(","));
+    const rows = text.trim().split("\n").map(r => r.split(","));
 
-    // parsing tabel topper & foam
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    const shiftBody = document.getElementById("shiftBody");
+    const totalTopperBody = document.getElementById("bodyTotalTopper");
+    const totalFoamBody = document.getElementById("bodyTotalFoam");
 
-    const topperRows = rows.slice(5,8);
-    const foamRows = rows.slice(11,16);
-    const totalRow = rows[18];
+    topperBody.innerHTML = "";
+    foamBody.innerHTML = "";
+    totalTopperBody.innerHTML = "";
+    totalFoamBody.innerHTML = "";
 
-    // append data tanpa mengosongkan tabel sebelum fetch selesai
-    topperRows.forEach((row,i)=>{
+    const topperRows = rows.slice(5, 8);
+    const foamRows = rows.slice(11, 16);
+
+    topperRows.forEach(row => {
       const tr = document.createElement("tr");
-      row.slice(0,13).forEach((cell,j)=>{
+      row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
-        td.textContent=cell;
-        td.style.fontWeight="bold";
-        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
-        if(j>0 && !isNaN(val) && val<90) td.style.background="#ffcccc";
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 90 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
+        }
         tr.appendChild(td);
       });
-      if(i===0) topperBody.innerHTML=""; // hapus loading
       topperBody.appendChild(tr);
     });
 
-    foamRows.forEach((row,i)=>{
+    foamRows.forEach(row => {
       const tr = document.createElement("tr");
-      row.slice(0,13).forEach((cell,j)=>{
-        const td=document.createElement("td");
-        td.textContent=cell;
-        td.style.fontWeight="bold";
-        const val=parseFloat(cell.replace(/[^0-9.]/g,""));
-        if(j>0 && !isNaN(val) && val<75) td.style.background="#ffcccc";
+      row.slice(0, 13).forEach((cell, index) => {
+        const td = document.createElement("td");
+        td.textContent = cell;
+        td.style.fontWeight = "bold";
+
+        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
+        if (index > 0 && !isNaN(cleanValue)) {
+          if (cleanValue < 75 && cleanValue > 0) {
+            td.style.backgroundColor = "#ffcccc";
+            td.style.color = "#a80000";
+          }
+        }
         tr.appendChild(td);
       });
-      if(i===0) foamBody.innerHTML="";
       foamBody.appendChild(tr);
     });
 
-    if(totalRow){
-      shiftBody.innerHTML=`<tr>
-        <td>${totalRow[2]||0}</td>
-        <td>${totalRow[3]||0}</td>
-        <td>${totalRow[4]||0}</td>
-        <td>${totalRow[5]||0}</td>
-      </tr>`;
+    const totalRow = rows[18];
+    if (totalRow) {
+      const topperValue = totalRow[0] || "0";
+      const foamValue = totalRow[1] || "0";
+      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
     }
 
-    status.textContent = "✅ Diperbarui: "+new Date().toLocaleTimeString("id-ID");
+    const now = new Date();
+    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
 
-  } catch(err){
-    console.error(err);
+  } catch (err) {
+    console.error("Fetch error:", err);
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
 
-function updateClock(){
-  const now=new Date();
-  document.getElementById("tanggal").textContent=now.toLocaleDateString("id-ID",{ weekday:'long', year:'numeric', month:'long', day:'numeric'});
-  document.getElementById("jam").textContent=now.toLocaleTimeString("id-ID",{ hour12:false });
+function updateClock() {
+  const now = new Date();
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
 }
 
-setInterval(updateClock,1000);
+setInterval(updateClock, 1000);
 updateClock();
 loadSheetData();
-setInterval(loadSheetData,30000);
+setInterval(loadSheetData, 30000);
+
+document.getElementById("shiftSelector").addEventListener("change", function() {
+  const value = this.value;
+  if (value === "2") {
+    window.location.href = "shift2.html";
+  } else {
+    window.location.href = "index.html";
+  }
+});
 </script>
 </body>
 </html>
